@@ -119,7 +119,9 @@ namespace libtorrent
 			return int(val.length());
 		}
 
-		TORRENT_EXTRA_EXPORT char const* integer_to_str(char* buf, int size, entry::integer_type val);
+		// this is used in the template, so it must be available to the client
+		TORRENT_EXPORT char const* integer_to_str(char* buf, int size
+			, entry::integer_type val);
 
 		template <class OutIt>
 		int write_integer(OutIt& out, entry::integer_type val)
