@@ -72,6 +72,9 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix resume file issue related to daylight savings time on windows
+	* improve error checking in lazy_bdecode
+
 0.16.16 release
 
 	* add missing add_files overload to the python bindings
